<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bgimg5111">

    <EditText
        android:id="@+id/dialogname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/dialogcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_code"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/dialogsection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_section"
        android:inputType="number"
        android:minHeight="48dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialogclass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/add_class"
            android:textColor="#558B2F"
            android:visibility="visible" />


    </LinearLayout>

</LinearLayout>