<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg5111"
    tools:context="fragments.Classroom">


    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_classroom"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/welcome_to_your_classroom"
        android:textAlignment="center"
        android:textColor="#FB8C00"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addclassbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addclassbutton"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="582dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/add_classroom"
        android:textColor="#558B2F"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_classroom" />

    <TextView
        android:id="@+id/classinfo"
        android:layout_width="343dp"
        android:layout_height="155dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="374dp"
        android:hint="@string/information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addclassbutton" />
</android.support.constraint.ConstraintLayout>