<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domillionbrushfree"
        android:text="@string/odhyayon"
        android:textColor="#FF9800"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/logintotch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="530dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/log_in_to_your_teacher_account"
        android:textAlignment="center"
        android:textColor="#4C3F71"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/email"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:ems="10"
        android:fontFamily="@font/raleway_bold"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="130dp"
        android:layout_height="31dp"
        android:fontFamily="@font/raleway_bold"
        android:lineSpacingExtra="16sp"
        android:text="@string/tpassword"
        android:textAlignment="center"
        android:textColor="#4C3F71"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="213dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/raleway_bold"
        android:inputType="textPassword"
        android:textColor="#3949AB"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:fontFamily="@font/raleway_bold"
        android:lineSpacingExtra="14sp"
        android:text="@string/temail"
        android:textAlignment="center"
        android:textColor="#4C3F71"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/teacherlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/login"
        android:textColor="#558B2F"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

  </android.support.constraint.ConstraintLayout
   >